refactor: added ModelMapperConfig